@@ -36,6 +36,7 @@ Changes for 1.5:
  - added login/logout (Artem)
 
 Changes for 1.4.5:
+ - [ZBX-246] fixed header error in Monitoring->slideshows (Artem)
  - [ZBX-243] speed improvement for windows agent for eventlog[] processing (sasha)
  - [DEV-92] added supprt of multiple windows agents, service description (Sasha)
  - [ZBX-7] added support of system.cpu.util[] for FreeBSD agents, thanks to 'brick' (Sasha)
